# mcmap

./: .format-ignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  VERSION  block.cpp  block.h  blocks.h  blocktypes.def  canvas.cpp  canvas.h  changelog.txt  colors.cpp  colors.h  colors.json  colors.txt  draw.cpp  draw.h  draw_block.cpp  draw_png.cpp  draw_png.h  extractcolors.cpp  extractcolors.h  filesystem.cpp  filesystem.h  globals.cpp  globals.h  helper.cpp  helper.h  main.cpp  mcmap.sln  mcmap.vcproj  nbt.cpp  nbt.h  options.h  pngreader.cpp  pngreader.h  (+6 more)
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  format-police.yml  routine-exam.yml
contrib/gif/: createGif.sh
contrib/leaflet/: index.html
contrib/openlayers/: README.md  mcmap.html  render.sh
linux-build/: Makefile  build-linux.dockerfile  makefile  nfpm.yaml  postinstall.sh
nbt/: iterators.hpp  nbt.hpp  tag_types.hpp
nbt_multi/: nbt.cpp  nbt.h
package-debian/: Makefile  nfpm.yaml
scripts/: CMakeLists.txt  Makefile  README.md  average.sh  chunkPos.cpp  extractChunk.cpp  json2bson.cpp  levelInfo.cpp  memProf.c  natural.list  nbt2json.cpp  plot.gnuplot  profile.c  regionMove.cpp  regionParser.cpp  regionReader.cpp
src/: CMakeLists.txt  VERSION  block_drawers.cpp  block_drawers.h  blocktypes.def  canvas.cpp  canvas.h  chunk.cpp  chunk.h  cli.cpp  colors.bson  colors.cpp  colors.h  colors.json  compat.h  draw_png.cpp  draw_png.h  helper.cpp  helper.h  logger.cpp  logger.h  main.cpp  marker.cpp  marker.h  mcmap.cpp  mcmap.h  memory.cpp  memory.h  png.cpp  png.h  region.cpp  region.h  savefile.cpp  savefile.h  section.cpp  section.h  settings.cpp  settings.h  worldloader.cpp  worldloader.h
src/chunk_format_versions/: assert.cpp  assert.hpp  get_section.cpp  get_section.hpp  section_format.cpp  section_format.hpp
src/cli/: CMakeLists.txt  cli.cpp  parse.cpp  parse.h
src/graphical/: CMakeLists.txt  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcmap-gui_en_US.ts
src/include/: 2DCoordinates.hpp  CMakeLists.txt  compat.hpp  counter.hpp  logger.hpp  map.hpp  marker_png.h  progress.hpp  translator.hpp
src/include/fmt/: CMakeLists.txt  color.hpp  format.cpp  region.hpp
src/include/nbt/: gzparse.hpp  hash.hpp  iterators.hpp  nbt.hpp  parser.hpp  stream.hpp  tag_types.hpp  to_json.hpp  translator.hpp  writer.hpp
tests/: CMakeLists.txt  README.md  bad.json  nowater.json  sample_chunk.h  sample_level.cpp  samples.h  test_canvas.cpp  test_chunk.cpp  test_colors.cpp  test_compat.cpp  test_coordinates.cpp  test_nbt.cpp  test_nbt_hash.cpp  test_section.cpp  test_setup.cpp
