CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(mcmap LANGUAGES CXX VERSION 3.0.1)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

OPTION(DEBUG_BUILD "Debug build" OFF)

FIND_PACKAGE(OpenMP)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(GTest)
FIND_PACKAGE(QT NAMES Qt6 Qt5 COMPONENTS Widgets LinguistTools)
FIND_PACKAGE(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets LinguistTools)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(src/include)

ADD_DEFINITIONS(-Wall -Wextra -pedantic -D_FILE_OFFSET_BITS=64)

IF(DEBUG_BUILD)
	ADD_DEFINITIONS(-O0 -g3)
ELSE()
	ADD_DEFINITIONS(-O3)
ENDIF()

IF(WIN32)
    # 100M stack + 3.5G heap on windows
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:104857600 /HEAP:3758096384")
    ADD_DEFINITIONS(-D_WINDOWS=1)
ENDIF()

IF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.0.0")
    ADD_LINK_OPTIONS(-lstdc++fs)
  ENDIF()
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(tests)
